data/diff_tests/wasmtime/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3080.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\a8\80\80\80\00\03\03\65\6e\76\06\66"
    "\75\6e\63\5f\31\00\00\03\65\6e\76\06\66\75\6e\63"
    "\5f\32\00\00\03\65\6e\76\06\66\75\6e\63\5f\33\00"
    "\00\03\82\80\80\80\00\01\00\0a\91\80\80\80\00\01"
    "\8b\80\80\80\00\00\10\00\10\01\10\02\0f\41\00\0b"
  )
""
)